[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/level/music/Common Fight.ogg" type="AudioStream" id=1]
[ext_resource path="res://assets/level/sprites/desert-backgorund.png" type="Texture" id=2]
[ext_resource path="res://assets/level/sprites/clouds.png" type="Texture" id=3]
[ext_resource path="res://scripts/Level.gd" type="Script" id=4]
[ext_resource path="res://scene/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/Enemy.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 256, 0, 0, 0, 0, 0, 1, -5, 0, 0, 0, 0, 129, -4, 0, 0, 0, 0, 256, 0 )
}

[node name="Level" type="Node2D" groups=["level"]]
script = ExtResource( 4 )
Enemy = ExtResource( 7 )

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 0, 270 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxLayer"]
texture = ExtResource( 2 )
centered = false

[node name="Cloud1" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Cloud1"]
motion_mirroring = Vector2( 0, 250 )

[node name="Sprite" type="Sprite" parent="Cloud1/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.313726 )
texture = ExtResource( 3 )
centered = false

[node name="Cloud2" type="ParallaxBackground" parent="."]
offset = Vector2( 0, 128 )
transform = Transform2D( 1, 0, 0, 1, 0, 128 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Cloud2"]
motion_mirroring = Vector2( 0, 270 )

[node name="Sprite" type="Sprite" parent="Cloud2/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.470588 )
texture = ExtResource( 3 )
centered = false

[node name="player" parent="." instance=ExtResource( 5 )]
position = Vector2( 78, 224 )

[node name="EnemyTimer" type="Timer" parent="."]

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Enemyspawn" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( 256, 0 )
rotation = -3.12199

[node name="HUD" parent="." instance=ExtResource( 6 )]

[connection signal="tree_exiting" from="." to="HUD" method="_on_Level_tree_exiting"]
[connection signal="tree_exiting" from="player" to="HUD" method="_on_player_tree_exiting"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="game_over" from="HUD" to="." method="_on_HUD_game_over"]
[connection signal="tree_exiting" from="HUD" to="HUD" method="_on_HUD_tree_exiting"]
